--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <title>homepage</title>
 
-        <link rel="stylesheet" type="text/css" href="FalseGod.css">
+        <link rel="stylesheet" type="text/css" href="css.css">
 
     </head>       
     <body>
